# Agent_trading_expert

./: .env  .env.example  .gitignore  DEPLOYMENT_NEON.md  Dockerfile  PIANO_OPERATIVO.md  PRD.md  README.md  package.json  playwright.config.js  pyproject.toml  render.yaml  requirements.txt
.agents_tmp/: PLAN.md
.claude/: settings.json
api/: chat_api.py  main.py
configs/: agents.yaml  config_loader.py  docker-compose.yaml  kubernetes.yaml  paths.py
dashboards/: README_DEPLOYMENT.md  colors_and_type.css  config.js  dashboard_agents.html  dashboard_backtest.html  dashboard_backtest_live.html  dashboard_builder.html  dashboard_data.js  dashboard_documentation.html  dashboard_execution.html  dashboard_live.html  dashboard_models.html  dashboard_performance.html  dashboard_pipeline.html  dashboard_research.html  dashboard_risk.html  dashboard_utils.js  dashboard_validation.html  dashboard_with_chat.html  index.html  nav.js  strategy.html
docs/: ARCHITECTURE_MAP.md  ARCHITECTURE_V2.md  MIGRATION_GUIDE_V1_V2.md  PHASE_0_STABILIZATION.md
execution_engine/: __init__.py  app.py  computation_service.py  metrics.py  queue_worker.py  runner.py
mcp_servers/: render_mcp.py
migrations/: V2__architecture.sql
models/: backtest.py  features.py  model_a_comparative_study_of_dynamic.py  model_dynamic_time_window_optimization_for.py  model_from_pyx_to_py_investigating.py  model_highfrequency_statistical_arbitrage.py  model_intraday_momentum_trading_with_machine.py  model_momentum_further_constrains_sharpness_at.py  test_model_a_comparative_study_of_dynamic.py  (+5 more)
(+124 files in other folders)
